syntax = "proto3";

option go_package="./;pb";

package pb;

service Greeter{
    rpc GetStream(StreamReqData) returns(stream StreamResData){}
}

message StreamReqData{
    string data = 1;
}

message StreamResData{
    string data = 1;
}